--- a/test/Makefile.srclist
+++ b/test/Makefile.srclist
@@ -33,6 +33,7 @@ TEST_CFDCORE_SOURCES= \
     test_scriptoperator.cpp \
     test_scripthash.cpp \
     test_scriptelement.cpp \
+    test_scriptutil.cpp \
     test_txin_txinreference.cpp \
     test_txout_txoutreference.cpp \
     test_scriptwitness.cpp \
