--- a/package.json
+++ b/package.json
@@ -8,42 +8,42 @@
     "cmake_configure": "run-script-os",
     "cmake_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off",
     "cmake_configure:linux": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=./build/Release -g",
-    "cmake_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" -g",
+    "cmake_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" -C",
     "cmake_quiet": "run-s cmake_quiet_configure cmake_quiet_build",
     "cmake_quiet_configure": "run-script-os",
     "cmake_quiet_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off -i",
     "cmake_quiet_configure:linux": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=./build/Release -g -i",
-    "cmake_quiet_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" -g -i",
+    "cmake_quiet_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" -C -i",
     "cmake_elem_off": "run-s cmake_elem_off_configure cmake_build",
     "cmake_elem_off_configure": "run-script-os",
     "cmake_elem_off_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_ELEMENTS=off --CDENABLE_JS_WRAPPER=off",
     "cmake_elem_off_configure:linux": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_ELEMENTS=off --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=./build/Release -g",
-    "cmake_elem_off_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_ELEMENTS=off --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" -g",
+    "cmake_elem_off_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_ELEMENTS=off --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" -C",
     "cmake_btc_off": "run-s cmake_btc_off_configure cmake_build",
     "cmake_btc_off_configure": "run-script-os",
     "cmake_btc_off_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_BITCOIN=off --CDENABLE_JS_WRAPPER=off",
     "cmake_btc_off_configure:linux": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_BITCOIN=off --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=./build/Release -g",
-    "cmake_btc_off_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_BITCOIN=off --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" -g",
+    "cmake_btc_off_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_BITCOIN=off --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" -C",
     "cmake_log_all": "run-s cmake_log_configure cmake_build",
     "cmake_log_configure": "run-script-os",
     "cmake_log_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDCFDCORE_DEBUG=on",
     "cmake_log_configure:linux": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=./build/Release --CDCFDCORE_DEBUG=on -g",
-    "cmake_log_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" --CDCFDCORE_DEBUG=on -g",
+    "cmake_log_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" --CDCFDCORE_DEBUG=on -C",
     "cmake_con_all": "run-s cmake_con_configure cmake_build",
     "cmake_con_configure": "run-script-os",
     "cmake_con_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDCFDCORE_DEBUG=on --CDCFDCORE_LOG_CONSOLE=on",
     "cmake_con_configure:linux": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=./build/Release --CDCFDCORE_DEBUG=on --CDCFDCORE_LOG_CONSOLE=on -g",
-    "cmake_con_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" --CDCFDCORE_DEBUG=on --CDCFDCORE_LOG_CONSOLE=on -g",
+    "cmake_con_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_JS_WRAPPER=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" --CDCFDCORE_DEBUG=on --CDCFDCORE_LOG_CONSOLE=on -C",
     "cmake_debug_all": "run-s cmake_debug_configure cmake_debug_build",
     "cmake_debug_configure": "run-script-os",
     "cmake_debug_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=on --CDCFDCORE_DEBUG=on -D",
     "cmake_debug_configure:linux": "cmake-js configure -O build --CDENABLE_SHARED=on --CDCFDCORE_DEBUG=on --CDTARGET_RPATH=./build/Debug -g -D",
-    "cmake_debug_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDCFDCORE_DEBUG=on --CDTARGET_RPATH=\"@executable(.*)Debug\" -g -D",
+    "cmake_debug_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDCFDCORE_DEBUG=on --CDTARGET_RPATH=\"@executable(.*)Debug\" -C -D",
     "cmake_gcov_all": "run-s cmake_gcov_configure cmake_debug_build",
     "cmake_gcov_configure": "run-script-os",
     "cmake_gcov_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_COVERAGE=on -D",
     "cmake_gcov_configure:linux": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_COVERAGE=on --CDTARGET_RPATH=./build/Debug -g -D",
-    "cmake_gcov_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_COVERAGE=on --CDTARGET_RPATH=\"@executable(.*)Debug\" -g -D",
+    "cmake_gcov_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_COVERAGE=on --CDTARGET_RPATH=\"@executable(.*)Debug\" -C -D",
     "cmake_clang": "run-s cmake_clang_configure cmake_build",
     "cmake_clang_configure": "run-script-os",
     "cmake_clang_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=on -C",
@@ -53,12 +53,12 @@
     "cmake_static_configure": "run-script-os",
     "cmake_static_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=off",
     "cmake_static_configure:linux": "cmake-js configure -O build --CDENABLE_SHARED=off --CDTARGET_RPATH=./build/Release -g",
-    "cmake_static_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" -g",
+    "cmake_static_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=off --CDTARGET_RPATH=\"@executable_path;./build/Release\" -C",
     "cmake_static_debug": "run-s cmake_static_debug_configure cmake_debug_build",
     "cmake_static_debug_configure": "run-script-os",
     "cmake_static_debug_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=off --CDCFDCORE_DEBUG=on -D",
     "cmake_static_debug_configure:linux": "cmake-js configure -O build --CDENABLE_SHARED=off --CDCFDCORE_DEBUG=on --CDTARGET_RPATH=./build/Release -g -D",
-    "cmake_static_debug_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=off --CDCFDCORE_DEBUG=on --CDTARGET_RPATH=\"@executable_path;./build/Release\" -g -D",
+    "cmake_static_debug_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=off --CDCFDCORE_DEBUG=on --CDTARGET_RPATH=\"@executable_path;./build/Release\" -C -D",
     "cmake_build": "cmake-js build -O build",
     "cmake_debug_build": "cmake-js build -O build -D",
     "cmake_quiet_build": "cmake-js build -O build -i",
