--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "cmake_debug_configure": "run-script-os",
     "cmake_debug_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=on --CDCFDCORE_DEBUG=on -D",
     "cmake_debug_configure:linux": "cmake-js configure -O build --CDENABLE_SHARED=on --CDCFDCORE_DEBUG=on --CDTARGET_RPATH=./build/Debug -g -D",
-    "cmake_debug_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDCFDCORE_DEBUG=on --CDTARGET_RPATH=\"@executable(.*)Debug\" -C -D",
+    "cmake_debug_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDCFDCORE_DEBUG=on --CDTARGET_RPATH=\"@executable_path;./build/Debug\" -C -D",
     "cmake_gcov_all": "run-s cmake_gcov_configure cmake_debug_build",
     "cmake_gcov_configure": "run-script-os",
     "cmake_gcov_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_COVERAGE=on -D",
     "cmake_gcov_configure:linux": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_COVERAGE=on --CDTARGET_RPATH=./build/Debug -g -D",
-    "cmake_gcov_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_COVERAGE=on --CDTARGET_RPATH=\"@executable(.*)Debug\" -C -D",
+    "cmake_gcov_configure:darwin": "cmake-js configure -O build --CDENABLE_SHARED=on --CDENABLE_COVERAGE=on --CDTARGET_RPATH=\"@executable_path;./build/Debug\" -C -D",
     "cmake_clang": "run-s cmake_clang_configure cmake_build",
     "cmake_clang_configure": "run-script-os",
     "cmake_clang_configure:win32": "cmake-js configure -O build --CDENABLE_SHARED=on -C",
