--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "test_cfdcore:win32": "cd build/Release && cfdcore_test.exe",
     "test_cfdcore:linux": "cd build/Release && ./cfdcore_test",
     "test_cfdcore:darwin": "cd build/Release && ./cfdcore_test",
-    "lcov_output": "cd build && make lcov_cfdcore lcov_cfd",
+    "lcov_output": "cd build && make lcov_cfdcore",
     "coverage": "run-s ctest_debug lcov_output",
     "coverage_all": "run-s cmake_clean cmake_gcov_configure cmake_debug_build ctest_debug lcov_output",
     "doxygen_check": "run-script-os",
