update doxygen execute timing.

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "lint_check:darwin": "cd tools && ./lint_quiet.sh",
     "git_subm_update": "git submodule -q foreach git fetch -q && git submodule -q update -i",
     "check": "run-s lint_check doxygen_check ctest_quiet",
-    "check_all": "run-s cmake_clean git_subm_update lint_check doxygen_check cmake_quiet ctest_quiet"
+    "check_all": "run-s cmake_clean git_subm_update lint_check cmake_quiet doxygen_check ctest_quiet"
   },
   "author": "",
   "license": "MIT",
