--- a/test/Makefile.srclist
+++ b/test/Makefile.srclist
@@ -26,7 +26,8 @@ TEST_CFDCORE_SOURCES= \
     test_abstract_transaction.cpp \
     test_pubkey.cpp \
     test_privkey.cpp \
-    test_extkey.cpp \
+    test_extpubkey.cpp \
+    test_extprivkey.cpp \
     test_address.cpp \
     test_scriptbuilder.cpp \
     test_script.cpp \
